Tue Aug 23 21:15:02 2011  fox

     138* ctw.c: Continuing fix for dangling esc sequences.

Mon Aug 22 20:26:05 2011  fox

     137* ctw.c: Fix problem with continued escape sequences with
          text fields.

     136* ctw.c: Avoid core dump when we cannot find a font.

Wed Aug 10 18:15:55 2011  fox

     135* ctw.c: Dont core dump when drawing graphical label and no font
          specified.

     134* term.c: Add CTW_TERM=1 to the environment so children know
          we are running inside fcterm.

Mon Aug  1 21:15:53 2011  fox

     133* ctw.c: Display NUL bytes however.

     132* term.c: Dont interpret NUL special when not using ptysrv.

Mon Jul 25 20:02:11 2011  fox

     131* ctw.c: Fix initial 'e' vs 'E'. Add 'fatal' to the mix.

Sun Jul 24 16:52:47 2011  fox

     130* ctw.c: Add support for matching error/warning on a line.

Wed Jul 20 21:32:28 2011  fox

     129* term.c: Add dynamic redisplay of the minimap.

     128* ctw.c: Make sure we record the fast-scrolled history lines.

Tue Jul 19 22:46:40 2011  fox

     127* ctw.c: Add assertion detection of lcache overflow.

Tue May  3 21:32:06 2011  fox

     126* ctw.c: Make clipboard pasting an 'OR' operation and not an 'AND' one
          to avoid multiple pastes from rdesktop.

Thu Mar 24 09:17:47 2011  fox

     125* build.h: 129

     124* Add Alt-[ and Alt-] keystrokes.

Wed Feb  2 07:27:05 2011  fox

     123* build.h: 4.29

     122* ctw.c: Fix ESC]46 logfilename code.

Tue Nov 23 23:27:45 2010  fox

     121* ctw.c: down_line(): Fix infinite scroll losing sync.

Sat Nov 20 20:53:22 2010  fox

     120* term.c: Add -dump command line switch for dumping the screens
          to files on a timer, so you can watch another session in live
	  mode.

Sat Oct 16 17:44:45 2010  fox

     119* term.c: Add color icon.

Mon Mar  8 21:07:06 2010  fox

     118* Fixes to display.pl; add NFS to collect.pl.

Sun Mar  7 11:12:07 2010  fox
