@@ -1,5 +1,6 @@
 f3df4332 size=66      mtime=1091540434 ./.gdbinit
-95af7357 size=12097   mtime=1313012141 ./Changes
+00000000 size=4096    mtime=1314132278 ./.git
+5fd30914 size=12695   mtime=1314455081 ./Changes
 4cd60854 size=25873   mtime=1221388805 ./README
 2821fbbd size=2816    mtime=1267906051 ./README.2010
 992cfa7b size=752     mtime=1221388987 ./README.fcterm
@@ -9,17 +10,17 @@ c3f39024 size=12403   mtime=958296553 ./Xdefaults
 11420258 size=357931  mtime=1169593899 ./all-escapes.txt
 0b8a1365 size=256     mtime=798888793 ./colors.def
 8612e1f2 size=104     mtime=1266613484 ./colors.sh
-7dc65875 size=242887  mtime=1313012127 ./ctw.c
+0eb3bb8c size=245343  mtime=1314455205 ./ctw.c
 40697125 size=1007    mtime=794877761 ./ctw.sh
 86ae103c size=231     mtime=1312231261 ./fccat
 cc143aa6 size=2480    mtime=887227412 ./fcterm.bitmap
-32d8d348 size=63246   mtime=1267480105 ./fcterm.c
+2d32dd5c size=63246   mtime=1314131910 ./fcterm.c
 eee5bd46 size=3949    mtime=1287247446 ./fcterm.xpm
 aea56fd6 size=27652   mtime=1220482375 ./fmcterm.c
-fff31319 size=162     mtime=1313012129 ./include/build.h
+f1eeeaf9 size=162     mtime=1314455068 ./include/build.h
 5f5d5892 size=432     mtime=1267915971 ./include/code.h
 9642608f size=18951   mtime=1266528193 ./include/ctw.h
-a12b1f81 size=9198    mtime=1311522633 ./include/ctwP.h
+50d7d9be size=9407    mtime=1314454940 ./include/ctwP.h
 94ce2e6d size=5538    mtime=1226785680 ./include/fcterm.h
 92720a51 size=14389   mtime=1235914278 ./include/machine.h
 0ef6df9c size=4365    mtime=935224855 ./include/machos/linux.h
@@ -32,7 +33,7 @@ fd5b5af3 size=1459    mtime=1220482384 ./include/motif.h
 67676b98 size=26      mtime=1220482384 ./include/patchlevel.h
 80175cf8 size=3494    mtime=1220482384 ./include/scrbar.h
 99fb482f size=1230    mtime=1220482384 ./include/scrbarP.h
-52470378 size=7433    mtime=1267915978 ./include/sequence.h
+f93d7169 size=7526    mtime=1314393576 ./include/sequence.h
 1660dfdf size=21334   mtime=784733258 ./junk/Scrollbar.c
 bfe0fd0a size=4311    mtime=784733258 ./junk/Scrollbar.h
 8857d143 size=3123    mtime=784733258 ./junk/ScrollbarP.h
@@ -45,10 +46,10 @@ f0253d81 size=533     mtime=1310851465 ./machines/linux-x86_32.sh
 1fdfe5e3 size=292     mtime=936096619 ./machines/sol2-sparc.sh
 403bdbb9 size=317     mtime=937912779 ./machines/unixware21.sh
 27a32063 size=247     mtime=935265192 ./machines/unixware7.sh
-7e883f98 size=3135    mtime=1296638884 ./makefile
+66acd3ff size=3210    mtime=1314132298 ./makefile
 3a97a655 size=71255   mtime=794877763 ./misc/aixterm
 4902012e size=403     mtime=1267468714 ./mkcode.sh
-55d49aa9 size=6417    mtime=1267738715 ./mkseq.sh
+ee64133e size=6512    mtime=1314393500 ./mkseq.sh
 ce4b58e5 size=4386    mtime=1220482375 ./motif.c
 58ba9418 size=10464   mtime=1220482375 ./pty.c
 66725d33 size=35857   mtime=1267564200 ./ptysrv.c
@@ -68,10 +69,8 @@ b1197941 size=162     mtime=1267481650 ./samples/graphs
 7f872666 size=388     mtime=1267574353 ./samples/rect.pl
 623fd7c0 size=2066    mtime=1267574421 ./samples/smaps.pl
 0d37e119 size=23367   mtime=1227137032 ./scrbar.c
-ba5dded5 size=39830   mtime=1287253916 ./sda1.blktrace.0
-2a222cdc size=74632   mtime=1287253916 ./sda1.blktrace.1
 9b5dde01 size=336     mtime=1220482376 ./t.c
-ebc97186 size=63994   mtime=1312996548 ./term.c
+a32a030e size=64097   mtime=1314393317 ./term.c
 d5534b35 size=1945    mtime=1233095977 ./xft.c
 42f10135 size=431     mtime=863120235 ./xpm/darrow1.xpm
 99c6cc3a size=418     mtime=863120441 ./xpm/darrow2.xpm
@@ -80,4 +79,3 @@ d5534b35 size=1945    mtime=1233095977 ./xft.c
 063f6569 size=431     mtime=863120315 ./xpm/uarrow1.xpm
 6f3d6a5e size=418     mtime=863120472 ./xpm/uarrow2.xpm
 94026a02 size=17846   mtime=794877769 ./xterm.seq
-00000000 size=1       mtime=1151258611 ./z
