@@ -93,6 +93,7 @@ sed -e 's/^/"/g' -e 's/$/\\r\\n"/g' <<EOF
    ESC [1932 ; name ; m                  Set font   
    ESC [1933 ; x; y; str; m              Draw image string  		
    ESC [1934 m                           Query winsize in pixels (wxh<Enter>)
+   ESC [1935 m                           Dump internal status to a /tmp/fcterm/fcterm.$CTW_PID
    ESC [n;m r	Set scrolling region to lines n..m.
    ESC [n;m r	Set scrolling region.
    ESC [s	Saved cursor position.
